Inicio De Secion 1

--- a/StockFood_Beta/App.xaml
+++ b/StockFood_Beta/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="StockFood_Beta.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:StockFood_Beta"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="View/InicioDeSecion.xaml"
+             StartupUri="View/InicioDeSecion.xaml">
     <Application.Resources>
          
     </Application.Resources>
