--- a/StockFood_Beta/MainWindow.xaml
+++ b/StockFood_Beta/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StockFood_Beta"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="MainWindow" Height="550" Width="800">
+    <TextBlock Text="Hola"
+               >
+        
+    </TextBlock>
+    
 </Window>
