--- a/StockFood_Beta/View/InicioDeSecion.xaml
+++ b/StockFood_Beta/View/InicioDeSecion.xaml
@@ -43,22 +43,23 @@
                         Grid.Column="0"
                         VerticalAlignment="Center"
                          Margin="10,0,0,0"/>
-            
+
+
             <Button x:Name="btnMinimize"                           
-                    BorderThickness="0"
-                    Content="-"
-                    Foreground="White"
-                    FontSize="12"
-                    FontFamily="Monserrat"
-                    Cursor="Hand"
-                    Grid.Column="1"
-                    Click="btnMinimize_Click" >
+                            BorderThickness="0"
+                            Content="-"
+                            Foreground="White"
+                            FontSize="16"
+                            FontFamily="Montserrat"
+                            Cursor="Hand"
+                            Grid.Column="1"
+                            Click="btnMinimize_Click">
                 <Button.Style>
                     <Style TargetType="Button">
-                        <Setter Property="Background" Value="#000000"/>
+                        <Setter Property="Background" Value="BlAck"/>
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#AAAAAA"/>
+                                <Setter Property="Background" Value="#424242 "/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
@@ -66,10 +67,10 @@
                 <Button.Template>
                     <ControlTemplate TargetType="Button">
                         <Border Width="18" Height="18"
-                                    CornerRadius="9"
-                                    Background="{TemplateBinding Background}">
-                            <ContentControl VerticalAlignment="Center"
-                                            HorizontalAlignment="center"/>
+                                        CornerRadius="9"
+                                        Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
@@ -77,10 +78,10 @@
             
             <Button x:Name="btnClose"                           
                             BorderThickness="0"
-                            Content="x"
+                            Content="X"
+                            Foreground="White"
                             FontSize="16"
                             FontFamily="Montserrat"
-                            Foreground="White"
                             Cursor="Hand"
                             Grid.Column="2"
                             Click="btnClose_Click">
@@ -89,7 +90,7 @@
                         <Setter Property="Background" Value="#900A11"/>
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#000000"/>
+                                <Setter Property="Background" Value="#A30A11"/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
@@ -97,15 +98,15 @@
                 <Button.Template>
                     <ControlTemplate TargetType="Button">
                         <Border Width="18" Height="18"
-                                CornerRadius="9"
-                                Background="{TemplateBinding Background}">
-                            <ContentControl VerticalAlignment="Center"
-                                            HorizontalAlignment="center"/>
-
+                                        CornerRadius="9"
+                                        Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
             </Button>
+
         </Grid>
     </Border>
 
