--- a/StockFood_Beta/View/InicioDeSecion.xaml
+++ b/StockFood_Beta/View/InicioDeSecion.xaml
@@ -113,7 +113,6 @@
                         </Button.Template>
                     </Button>
                 </Grid>
-
                 <StackPanel Width="250"
                             Grid.Row="2"
                             Orientation="Vertical"
@@ -165,19 +164,19 @@
                                FontSize="12"
                                FontWeight="Medium"
                                FontFamily="monserrat"
-                               Margin="0,30,0,0"/>
+                               Margin="0,25,0,0"/>
                     <TextBox x:Name="txtnombredeusuario"
                              FontFamily="Monserrat"
                              FontSize="13"
                              FontWeight="Medium"
                              Foreground="Black"
                              CaretBrush="#A30A11"
-                             BorderBrush="Gray"
+                             BorderBrush="#FF900A11"
                              BorderThickness="0,0,0,3"
                              Height="23"
                              VerticalAlignment="center"
                              Margin="0,5,0,0"
-                             Padding="20,0,0,0" RenderTransformOrigin="0.492,0.379">
+                             Padding="20,0,0,0" RenderTransformOrigin="0.492,0.379" SelectionBrush="#FF424242" SelectionTextBrush="#FF424242">
                         <TextBox.Background>
                             <ImageBrush ImageSource="/View/user2.ico" Stretch="Uniform"
                                         AlignmentX="Left" AlignmentY="Center">
@@ -191,14 +190,72 @@
                                 </ImageBrush.RelativeTransform>
                             </ImageBrush>
                         </TextBox.Background>
-
                     </TextBox>
 
-
-
-
+                    <TextBlock Text="Contraseña:"
+                               Foreground="Black"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               FontFamily="monserrat"
+                               Margin="0,5,0,0"/>
+                    <PasswordBox x:Name="txtContraseña"
+                             FontFamily="Monserrat"
+                             FontSize="13"
+                             FontWeight="Medium"
+                             Foreground="Black"
+                             CaretBrush="#A30A11"
+                             BorderBrush="#FF900A11"
+                             BorderThickness="0,0,0,3"
+                             Height="23"
+                             VerticalAlignment="center"
+                             Margin="0,5,0,0"
+                             Padding="20,0,0,0" RenderTransformOrigin="0.492,0.379" SelectionBrush="#FF424242" SelectionTextBrush="#FF424242">
+                        <PasswordBox.Background>
+                            <ImageBrush ImageSource="/View/Key.ico" Stretch="Uniform"
+                                        AlignmentX="Left" AlignmentY="Center">
+                                <ImageBrush.RelativeTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="1"/>
+                                        <SkewTransform CenterX="0.5" CenterY="0.5"/>
+                                        <RotateTransform CenterX="0.5" CenterY="0.5"/>
+                                        <TranslateTransform/>
+                                    </TransformGroup>
+                                </ImageBrush.RelativeTransform>
+                            </ImageBrush>
+                        </PasswordBox.Background>
+                    </PasswordBox>
+                    <Button x:Name="btnInciarSesion"                           
+                            BorderThickness="0"
+                            Content="Iniciar Sesion"
+                            Foreground="White"
+                            FontSize="14"
+                            FontFamily="Montserrat"
+                            Cursor="Hand"
+                            Margin="0,20,0,0"
+                            FontWeight="Medium"
+                            Click="btnInciarSesion_Click">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="#900A11"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#424242"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Width="110" Height="45"
+                                    CornerRadius="22.5"
+                                        Background="{TemplateBinding Background}">
+                                    <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
                 </StackPanel>
-
             </Grid>
         </Border>
     </Border>
