--- a/StockFood_Beta/View/InicioDeSecion.xaml
+++ b/StockFood_Beta/View/InicioDeSecion.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StockFood_Beta.View"
-        xmlns:InicioCall = "clr-namespace:StockFood_Beta.ModelView"
+        xmlns:Call="clr-namespace:StockFood_Beta.ViewModel" 
+        xmlns:customcontrols="clr-namespace:StockFood_Beta.CustomControls"
         mc:Ignorable="d"
         Title="InicioDeSecion" Height="550" Width="800"
         WindowStyle="none"
@@ -15,13 +16,16 @@
         MouseDown="Window_MouseDown">
 
     <Window.DataContext>
-        <InicioCall:InciodesesionViewModel/>
+        <Call:InciodesesionViewModel/>
     </Window.DataContext>
     
     <Window.Resources>
-        <BooleanToVisibilityConverter x:Name="BooleantoVisibility"/>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibility"/>
     </Window.Resources>
-
+    
+    <Window.Visibility>
+        <Binding Path="IsViewVisible" Mode="TwoWay" Converter="{StaticResource BooleanToVisibility}"/>
+    </Window.Visibility>
 
     <Border CornerRadius="11">
         <Border.Background>
@@ -127,7 +131,7 @@
                 <StackPanel Width="250"
                             Grid.Row="2"
                             Orientation="Vertical"
-                            Margin="0,35,0,0">
+                            Margin="0,10,0,0">
                     <Border CornerRadius="100"
                             BorderThickness="5"
                             Width="200" Height="200">
@@ -162,7 +166,7 @@
                                FontWeight="Medium"
                                FontFamily="Monserrat"
                                HorizontalAlignment="Center"
-                               Margin="0,5,5,0"/>
+                               Margin="0,5,0,0"/>
                     <TextBlock Text="Todo por lo que luches puede que lo llegues a tener pero no quedes atras por la posibilidad de que no"
                                Foreground="White"
                                FontSize="12"
@@ -175,8 +179,9 @@
                                FontSize="12"
                                FontWeight="Medium"
                                FontFamily="monserrat"
-                               Margin="0,25,0,0"/>
+                               Margin="0,20,0,0"/>
                     <TextBox x:Name="txtnombredeusuario"
+                             Text="{Binding Username}"
                              FontFamily="Monserrat"
                              FontSize="13"
                              FontWeight="Medium"
@@ -212,42 +217,29 @@
                                FontWeight="Medium"
                                FontFamily="monserrat"
                                Margin="0,5,0,0"/>
-                    <PasswordBox x:Name="txtContraseña"
-                             FontFamily="Monserrat"
-                             FontSize="13"
-                             FontWeight="Medium"
-                             Foreground="Black"
-                             CaretBrush="#A30A11"
-                             BorderBrush="#FF900A11"
-                             BorderThickness="0,0,0,3"
-                             Height="23"
-                             VerticalAlignment="center"
-                             Margin="0,5,0,0"
-                             Padding="20,0,0,0" RenderTransformOrigin="0.492,0.379" SelectionBrush="#FF424242" SelectionTextBrush="#FF424242">
-                        <PasswordBox.Background>
-                            <ImageBrush ImageSource="/View/Images/Key.ico" Stretch="Uniform"
-                                        AlignmentX="Left" AlignmentY="Center">
-                                <ImageBrush.RelativeTransform>
-                                    <TransformGroup>
-                                        <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="1"/>
-                                        <SkewTransform CenterX="0.5" CenterY="0.5"/>
-                                        <RotateTransform CenterX="0.5" CenterY="0.5"/>
-                                        <TranslateTransform/>
-                                    </TransformGroup>
-                                </ImageBrush.RelativeTransform>
-                            </ImageBrush>
-                        </PasswordBox.Background>
-                    </PasswordBox>
-                    <Button x:Name="btnInciarSesion"                           
+                    <customcontrols:BindablePasswordBox Password="{Binding password}"
+                                                        Height="28"
+                                                        Margin="0,5,0,0">
+                    </customcontrols:BindablePasswordBox>
+
+                    <TextBlock Text="{Binding ErrorMessage}"
+                               Foreground="#3F0407"
+                               FontSize="14"
+                               FontWeight="Medium"
+                               FontFamily="Monserrat"
+                               Margin="0,5,0,0"
+                               TextWrapping="Wrap"/>
+
+                    <Button x:Name="btnInciarSesion"   
+                            Command="{Binding InicioCommand}"
                             BorderThickness="0"
                             Content="Iniciar Sesion"
                             Foreground="White"
                             FontSize="14"
                             FontFamily="Montserrat"
                             Cursor="Hand"
-                            Margin="0,20,0,0"
-                            FontWeight="Medium"
-                            Click="btnInciarSesion_Click">
+                            Margin="0,5,0,0"
+                            FontWeight="Medium">
                         <Button.Style>
                             <Style TargetType="Button">
                                 <Setter Property="Background" Value="#900A11"/>
