--- a/StockFood_Beta/View/InicioDeSecion.xaml
+++ b/StockFood_Beta/View/InicioDeSecion.xaml
@@ -181,7 +181,7 @@
                                FontFamily="monserrat"
                                Margin="0,20,0,0"/>
                     <TextBox x:Name="txtnombredeusuario"
-                             Text="{Binding Username}"
+                             Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
                              FontFamily="Monserrat"
                              FontSize="13"
                              FontWeight="Medium"
@@ -217,7 +217,7 @@
                                FontWeight="Medium"
                                FontFamily="monserrat"
                                Margin="0,5,0,0"/>
-                    <customcontrols:BindablePasswordBox Password="{Binding password}"
+                    <customcontrols:BindablePasswordBox Password="{Binding password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                         Height="28"
                                                         Margin="0,5,0,0">
                     </customcontrols:BindablePasswordBox>
